--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -18,8 +18,9 @@ exporters:
     endpoint: "http://zipkin-all-in-one:9411/api/v2/spans"
     format: proto
   prometheus:
-    endpoint: 0.0.0.0:9464
-    namespace: default
+    endpoint: 0.0.0.0:8889
+    resource_to_telemetry_conversion:
+        enabled: true
   logging:
 
 extensions:
