--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "docker compose up & node --require ./src/server/tracing-p.js ./src/server/test-services/producer-service.js & node --require ./src/server/tracing-c.js ./src/server/test-services/consumer-service.js"
+    "test": "docker compose up & node --require ./src/server/tracing-p.js ./src/server/test-services/producer-service.tsx & node --require ./src/server/tracing-c.tsx ./src/server/test-services/consumer-service.tsx"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.4.1",
