--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "next": "12.2.2",
     "next-auth": "^4.10.0",
     "opentelemetry-instrumentation-kafkajs": "^0.35.0",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "tippy.js": "^6.3.7"
