--- a/package.json
+++ b/package.json
@@ -2,20 +2,12 @@
   "name": "authapp",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "extest": "docker compose up & node --require ./src/server/tracing-p.tsx ./src/server/test-services/producer-service.tsx & node --require ./src/server/tracing-c.tsx ./src/server/test-services/consumer-service.tsx"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testMatch": [
-      "<rootDir>/__tests__/testPackageInstallation.test.ts"
-    ]
+    "test": "docker compose up & node --require ./src/server/tracing-p.tsx ./src/server/test-services/producer-service.tsx & node --require ./src/server/tracing-c.tsx ./src/server/test-services/consumer-service.tsx"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.4.1",
@@ -36,22 +28,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "tippy.js": "^6.3.7",
-    "ts-node": "^10.9.1"
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.3",
     "@types/react": "^18.2.14",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.2.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
-    "jest": "^29.6.1",
-    "kafkatrace": "^1.0.50",
     "mongoose": "^6.4.6",
     "postcss": "^8.4.25",
-    "tailwindcss": "^3.3.2",
-    "ts-jest": "^29.1.1"
+    "tailwindcss": "^3.3.2"
   }
 }
