--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "extest": "docker compose up & node --require ./src/server/tracing-p.tsx ./src/server/test-services/producer-service.tsx & node --require ./src/server/tracing-c.tsx ./src/server/test-services/consumer-service.tsx"
+    "test": "jest"
   },
   "jest": {
     "preset": "ts-jest",
@@ -17,21 +16,11 @@
     ]
   },
   "dependencies": {
-    "@opentelemetry/api": "^1.4.1",
-    "@opentelemetry/auto-instrumentations-node": "^0.38.0",
-    "@opentelemetry/exporter-metrics-otlp-proto": "^0.41.0",
-    "@opentelemetry/instrumentation": "^0.41.0",
-    "@opentelemetry/resources": "^1.15.0",
-    "@opentelemetry/sdk-node": "^0.41.0",
-    "@opentelemetry/sdk-trace-node": "^1.15.0",
-    "@opentelemetry/semantic-conventions": "^1.15.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "formik": "^2.2.9",
-    "kafkajs": "^2.2.4",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
-    "opentelemetry-instrumentation-kafkajs": "^0.35.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
