--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest"
+
   },
   "jest": {
     "preset": "ts-jest",
@@ -21,6 +22,7 @@
     "formik": "^2.2.9",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
+    "nodemon": "^3.0.1",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,8 +44,10 @@
     "jest": "^29.6.1",
     "mongoose": "^6.11.4",
     "postcss": "^8.4.25",
+    "react-particles": "^2.11.0",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.1",
+    "tsparticles-slim": "^2.11.1",
     "typescript": "^5.1.6"
   }
 }
