--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-particles": "^2.11.0",
     "test": "^3.3.0",
     "tippy.js": "^6.3.7",
     "ts-node": "^10.9.1",
-    "tsparticles-engine": "^2.11.1"
+    "tsparticles-engine": "^2.11.1",
+    "tsparticles-slim": "^2.11.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
